--- a/src/Components/InitialScreen/InitialScreen.css
+++ b/src/Components/InitialScreen/InitialScreen.css
@@ -10,7 +10,11 @@
 }
 
 .colorWhite {
-  width: 150px;
+  width: 130px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
   height: fit-content;
   filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(197deg)
     brightness(106%) contrast(101%);
