--- a/src/Components/SecondaryScreen/Hero/Hero.css
+++ b/src/Components/SecondaryScreen/Hero/Hero.css
@@ -15,7 +15,7 @@
   transform: translate(-50%, -50%);
 }
 .innerShadow {
-  box-shadow: inset 0px -200px 150px #000000;
+  box-shadow: inset 0px -400px 150px 50px #000000;
 }
 .outerShadow {
   box-shadow: 0px -200px 150px #000000;
