--- a/src/Components/SecondaryScreen/ChooseWatch/ChooseWatch.css
+++ b/src/Components/SecondaryScreen/ChooseWatch/ChooseWatch.css
@@ -1,3 +1,12 @@
 .innerTopShadow {
   box-shadow: inset 0px 400px 550px #000000;
+  position: relative;
+  z-index: 1;
+}
+.innerTopShadow::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background: linear-gradient(0deg, rgb(0 0 0 / 1), rgb(0 0 0 / 0));
 }
